--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
-fastapi
-uvicorn
-pandas
+fastapi==0.73.0
+pandas==1.4.0
+uvicorn==0.17.4
+aiofiles==0.6.0
+python-multipart==0.0.5
+jinja2==2.11.2
+gunicorn
+uvloop
+httptools
